fix z-index issue

--- a/assets/scss/shared-ui/_radio-checkbox.scss
+++ b/assets/scss/shared-ui/_radio-checkbox.scss
@@ -20,7 +20,7 @@
 			border-radius: $border-radius;
 			background-color: $radio-checkbox--background;
 			transition: 0.3s ease;
-			z-index: 1;
+			// z-index: 1;
 
 			&:before {
 				opacity: 0;
